# MigTD

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  POLICY_V2_FORMAL_SPECIFICATION.md  migtdemu.sh  readme.md  test.txt
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
config/: collateral_pre_production_fmspc  collateral_pre_production_fmspc.json  collateral_production_fmspc  collateral_production_fmspc.json  engine.json  image_layout.json  metadata.json  mmio_layout.json  policy-public.der  policy.json  policy_pre_production_fmspc.json  policy_production_fmspc.json  policy_v2.json  policy_with_fmspc.json  servtd_info.json  shim_layout.json  spdm_config.json
container/: Dockerfile
doc/: AzCVMEmu.md  integration_test.md  memory_usage_test.md  policy_v2.md  policy_v2_measurements.md  qemu_kvm_configuration.md  release.md  rtmr1_signer_anchor_proposal.md  security_test.md  tcb_mapping_design_proposal.md
sh_script/: build_AzCVMEmu_policy_and_test.sh  build_final.sh  build_policy_v2.sh  docker.sh  fuzzing.sh  integration_tdx.sh  key_gen.sh  preparation.sh  unit_test_coverage.sh
src/async/async_rustls/: Cargo.toml
src/async/async_rustls/src/: lib.rs
src/async_rustls/: Cargo.toml
src/async_rustls/src/: client.rs  lib.rs  server.rs
src/async_rustls/src/common/: handshake.rs  mod.rs
src/attestation/: Cargo.toml  build.rs  fixup-libservtd-attest-lib.sh
src/attestation/src/: attest.rs  binding.rs  collateral.rs  ghci.rs  igvmattest.rs  lib.rs  mock_quote.rs  null.rs  root_ca.rs  tdreport.rs
src/crypto/: Cargo.toml
src/crypto/fuzz/: Cargo.toml
src/crypto/fuzz/fuzz_targets/: afl_x509.rs  fuzzlib.rs  x509.rs
src/crypto/src/: crl.rs  lib.rs  x509.rs
src/crypto/src/rustls_impl/: async_tls.rs  ecdsa.rs  hash.rs  mod.rs  tls.rs
src/devices/pci/: Cargo.toml
src/devices/pci/src/: config.rs  consts.rs  layout.rs  lib.rs  mmio.rs
src/devices/virtio/: Cargo.toml
src/devices/virtio/fuzz/: Cargo.toml
src/devices/virtio/fuzz/fuzz_targets/: afl-virtio.rs  fuzz-virtio.rs  fuzzlib.rs
src/devices/virtio/fuzz/seeds/virtio/: seed
src/devices/virtio/src/: consts.rs  lib.rs  mem.rs  virtio_pci.rs  virtqueue.rs
src/devices/virtio_serial/: Cargo.toml
src/devices/virtio_serial/fuzz/: Cargo.toml
src/devices/virtio_serial/fuzz/fuzz_targets/: afl-serial.rs
src/devices/virtio_serial/fuzz/seeds/serial/: seed
src/devices/virtio_serial/src/: event.rs  lib.rs  port.rs
src/devices/vmcall_raw/: Cargo.toml
src/devices/vmcall_raw/fuzz/: Cargo.toml
src/devices/vmcall_raw/fuzz/fuzz_targets/: afl-vmcall_raw.rs  fuzz-vmcall_raw.rs  fuzzlib.rs
src/devices/vmcall_raw/src/: lib.rs  stream.rs
src/devices/vmcall_raw/src/transport/: event.rs  mod.rs  vmcall.rs
src/migtd/: Cargo.toml  build.rs
src/migtd/fuzz/: Cargo.toml
src/migtd/fuzz/fuzz_targets/: afl_migration_info_hob.rs  afl_service_response.rs  fuzzlib.rs  migration_info_hob.rs  service_response.rs
src/migtd/fuzz/seeds/migration_info_hob/: hob
src/migtd/fuzz/seeds/service_response/: response
src/migtd/src/: config.rs  event_log.rs  lib.rs  mig_policy.rs  quote.rs  ratls.rs
src/migtd/src/driver/: crash.rs  mod.rs  serial.rs  ticks.rs  timer.rs  vmcall_raw.rs  vsock.rs
src/migtd/src/migration/: data.rs  event.rs  init_data.rs  logging.rs  mod.rs  pre_session_data.rs  rebinding.rs  servtd_ext.rs  session.rs  transport.rs
src/migtd/src/ratls/: mod.rs  server_client.rs
src/migtd/src/spdm/: mod.rs  spdm_mig.rs  spdm_rebind.rs  spdm_req.rs  spdm_rsp.rs  spdm_vdm.rs  vmcall_msg.rs
src/policy/: Cargo.toml
src/policy/fuzz/: Cargo.toml
src/policy/fuzz/fuzz_targets/: afl_policy.rs  fuzzlib.rs  policy.rs
src/policy/fuzz/seeds/policy/: fuzz.json
src/policy/src/: config.rs  lib.rs  verify.rs
src/policy/src/v1/: config.rs  mod.rs  verify.rs
src/policy/src/v2/: collateral.rs  collaterals.rs  engine_svn.rs  mod.rs  policy.rs  servtd_collateral.rs
src/policy/test/: policy.json  policy.md  policy_001.json  policy_002.json  policy_003.json  policy_004.json  policy_005.json  policy_006.json  policy_007.json  policy_008.json  policy_009.json  policy_010.json  policy_full1.json  policy_full2.json  policy_full3.json  policy_invalid_guid.json  policy_no.json  policy_no_tdattr.json
src/policy/test/policy_v2/: collaterals.json  engine-private.der  engine-private.pk8  engine-public.der  engine.json  global.json  policy-private.der  policy-private.pk8  policy.json  policy_data.json  policy_signed.json  policy_v2.json  servtd_collateral.json  tcb_mapping.json
src/policy/test/policy_v2/cert_chain/: intermediate_ca.crt  issuer.crt  migtd_issuer_chain.pem  root_ca.crt
src/std-support/rust-std-stub/: Cargo.toml
src/std-support/rust-std-stub/src/: error.rs  lib.rs  prelude.rs  time.rs
src/std-support/rust-std-stub/src/io/: cursor.rs  error.rs  impls.rs  mod.rs  prelude.rs  stdio.rs  tests.rs  util.rs
src/std-support/rust-std-stub/src/io/buffered/: bufreader.rs  bufwriter.rs  linewriter.rs  mod.rs  tests.rs
src/std-support/rust-std-stub/src/io/error/: tests.rs
src/std-support/rust-std-stub/src/io/util/: tests.rs
src/std-support/rust-std-stub/src/sys/: mod.rs
src/std-support/sys_time/: Cargo.toml
src/std-support/sys_time/src/: lib.rs  rtc.rs
tests/test-td-payload/: Cargo.toml  build.rs
tests/test-td-payload/src/: lib.rs  main.rs  test.json  testattestation.rs  testmmiorw.rs  testmsrrw.rs  testservice.rs
tools/migtd-hash/: Cargo.toml  readme.md
tools/migtd-hash/src/: lib.rs  main.rs
tools/migtd-policy-generator/: Cargo.toml  readme.md
tools/migtd-policy-generator/src/: collateral.rs  lib.rs  main.rs  pcs_client.rs  pcs_types.rs  policy.rs  policy_v2.rs  qe_identity.rs
tools/migtd-policy-generator/src/platform_tcb/: fmspc.rs  mod.rs  tcb_info.rs
tools/migtd-policy-generator/src/policy/: mod.rs  qe_identity.rs  tcb_info.rs
tools/migtd-policy-generator/test/: fmspc_list.json  qe_identity.json  tcb_info.json
tools/migtd-policy-verifier/: Cargo.toml  readme.md
tools/migtd-policy-verifier/src/: main.rs
xtask/: Cargo.toml
xtask/src/: build.rs  (+4 more)
(+86 files in other folders)
