[workspace]

members = [
    "src/attestation",
    "src/crypto",
    "src/devices/pci",
    "src/devices/virtio",
    "src/devices/vsock",
    "src/migtd",
    "src/policy",
    "tests/test-td-payload",
    "xtask",
    ]

default-members = [
    "src/migtd",
    ]

exclude = [
    "deps/td-shim",
    "deps/rustls"
    ]

resolver = "2"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic
opt-level = "z"
lto = true

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
opt-level = "z"
lto = true

[patch.crates-io]
ring = { path = "deps/td-shim/library/ring" }
rustls = { path = "deps/rustls/rustls" }
