[workspace]

members = [
    "src/attestation",
    "src/crypto",
    "src/devices/pci",
    "src/devices/virtio",
    "src/devices/vsock",
    "src/devices/virtio_serial",
    "src/devices/vmcall_raw",
    "src/migtd",
    "src/policy",
    "src/async/async_io",
    "src/async/async_runtime",
    "tests/test-td-payload",
    "tools/migtd-hash",
    "tools/migtd-collateral-generator",
    "tools/migtd-policy-generator",
    "xtask",
    ]

default-members = [
    "src/migtd",
    ]

exclude = [
    "deps/td-shim",
    "deps/rustls"
    ]

resolver = "2"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic
opt-level = "z"
lto = true
strip = true

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
opt-level = "z"
lto = true

[patch.crates-io]
ring = { path = "deps/td-shim/library/ring" }
