[package]
name = "crypto"
version = "0.1.0"
license = "BSD-2-Clause-Patent"
edition = "2021"

[dependencies]
async_io = { path = "../async/async_io" }
cfg-if = "1.0"
der = {version = "0.7.9", features = ["oid", "alloc", "derive"]}
pki-types = { package = "rustls-pki-types", version = "1" }
rust_std_stub = { path = "../std-support/rust-std-stub" }
rustls = { version = "0.23.20", default-features = false, features = ["ring" ], optional = true }
ring = { path = "../../deps/td-shim/library/ring", default-features = false, features = ["alloc", "less-safe-getrandom-custom-or-rdrand"], optional = true }
rustls-pemfile = { version = "2.0.0", default-features = false }
sys_time = { path = "../std-support/sys_time" }
zeroize = "1.5.7"

[features]
default = ["rustls_impl"]
rustls_impl = ["rustls", "ring"]
