[package]
name = "migtd"
version = "0.5.1"
license = "BSD-2-Clause-Patent"
edition = "2021"

[[bin]]
name = "migtd"
required-features = ["main"]

[dev-dependencies]
attestation = { path = "../attestation", default-features = false, features = ["test"] }

[dependencies]
bitfield = "0.13.2"
anyhow = { version = "1.0.68", default-features = false }
async_io = { path = "../async/async_io" }
async_runtime = { path = "../async/async_runtime" }
attestation = { path = "../attestation", default-features = false, optional = true }
cc-measurement = { path = "../../deps/td-shim/cc-measurement"}
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
crypto = { path = "../crypto" }
futures-util = { version = "0.3.17", default-features = false }
lazy_static = { version = "1.0", features = ["spin_no_std"] }
log = { version = "0.4.13" }
pci = { path="../devices/pci" }
policy = {path = "../policy"}
rust_std_stub = { path = "../std-support/rust-std-stub" }
r-efi = "3.2.0"
scroll = { version = "0.10", default-features = false, features = ["derive"]}
spin = "0.9.2"
tdx-tdcall = { path = "../../deps/td-shim/tdx-tdcall"}
td-logger = { path = "../../deps/td-shim/td-logger", features = ["tdx"] }
td-layout = { path = "../../deps/td-shim/td-layout"}
td-loader = { path = "../../deps/td-shim/td-loader"}
td-paging = { path = "../../deps/td-shim/td-paging"}
td-payload = { path = "../../deps/td-shim/td-payload", features = ["tdx"] }
td-shim-interface = { path = "../../deps/td-shim/td-shim-interface"}
virtio = { path="../devices/virtio" }
vsock = { path="../devices/vsock", default-features = false, optional = true }
virtio_serial = { path="../devices/virtio_serial", optional = true }
vmcall_raw = { path="../devices/vmcall_raw", optional = true }
x86 = "0.47.0"
x86_64 = { version = "0.14", default-features = false, features = ["instructions"] }
zerocopy = { version = "0.7", features = ["derive"] }
bitfield-struct = "0.11"
raw-cpuid = "11.6.0"

# AzCVMEmu optional deps (grouped)
tdx-tdcall-emu = { path = "../../deps/td-shim-AzCVMEmu/tdx-tdcall", optional = true }
td-payload-emu = { path = "../../deps/td-shim-AzCVMEmu/td-payload-emu", optional = true }
td-shim-interface-emu = { path = "../../deps/td-shim-AzCVMEmu/td-shim-interface", optional = true, features = ["std"] }
td-shim-emu = { path = "../../deps/td-shim-AzCVMEmu/td-shim", optional = true }
env_logger = { version = "0.10.0", optional = true }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"], optional = true }

minicov = { version = "0.2", default-features = false, optional = true }
td-benchmark = { path = "../../deps/td-shim/devtools/td-benchmark", default-features = false,  optional = true }

spdmlib = {path = "../../deps/spdm-rs/spdmlib", default-features = false, features = ["spdm-ring", "chunk-cap", "mut-auth", "hashed-transcript-data"]}
codec = {path= "../../deps/spdm-rs/codec"}
maybe-async = "0.2.7"
async-trait = "0.1.71"
zeroize = { version = "1.5.0", features = ["zeroize_derive"]}
ring = { version = "0.17.14" }

[features]
default = ["virtio-vsock"]
cet-shstk = ["td-payload/cet-shstk"]
coverage = ["minicov"]
main = ["attestation", "policy/log"]
policy_v2 = ["policy/policy_v2", "attestation/attest-lib-ext", "td-shim-interface-emu?/policy_v2"]
stack-guard = ["td-payload/stack-guard"]
virtio-vsock = ["vsock/virtio-vsock"]
virtio-serial = ["virtio_serial"]
vmcall-interrupt = []
vmcall-vsock = ["vsock/vmcall-vsock"]
vmcall-raw = ["vmcall_raw"]
oneshot-apic = []
test_heap_size = ["td-benchmark", "td-payload/test_heap_size"]
test_stack_size = ["td-benchmark"]
test_disable_ra_and_accept_all = ["attestation/test", "tdx-tdcall-emu?/test_mock_report"] # Dangerous: can only be used for test purpose to bypass the remote attestation
spdm_attestation = ["main"]
test_mock_report = ["AzCVMEmu", "tdx-tdcall-emu/test_mock_report"]
AzCVMEmu = [
	"main",                     # Include main feature by default
	"attestation/AzCVMEmu",
	"crypto/AzCVMEmu",
	"policy/AzCVMEmu",
	"vmcall-raw",               # Include vmcall-raw feature by default
	"vmcall_raw/AzCVMEmu",
	"td-shim-interface-emu",
	"td-shim-emu",
	"tdx-tdcall-emu",
	"td-payload-emu",
	"env_logger",
	"tokio",
]
igvm-attest = ["attestation/igvm-attest"]

[patch.crates-io]
sys_time = { path = "src/std-support/sys_time" }
