[package]
name = "policy"
version = "0.1.0"
license = "BSD-2-Clause-Patent"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc-measurement = { path = "../../deps/td-shim/cc-measurement"}
crypto = { path = "../crypto" }
log = { version = "0.4.13", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc", "raw_value"] }
td-shim = { path = "../../deps/td-shim/td-shim", default-features = false }
td-shim-interface = { path = "../../deps/td-shim/td-shim-interface"}

[features]
std = []
AzCVMEmu = []
policy_v2 = []
