[package]
name = "test-td-payload"
version = "0.1.0"
description = "Run TDX hardware specific unit test cases inside a VM"
repository = "https://github.com/confidential-containers/td-shim"
homepage = "https://github.com/confidential-containers"
license = "BSD-2-Clause-Patent"
edition = "2018"

[dependencies]
attestation = { path = "../../src/attestation" }
spin = "0.9.2"
r-efi = "3.2.0"
bitfield = "0.13.2"
bitflags = "1.2.1"
linked_list_allocator = "0.10.4"
log = "0.4.13"
td-uefi-pi =  { path = "../../deps/td-shim/td-uefi-pi" }
td-logger =  { path = "../../deps/td-shim/td-logger" }
td-layout = { path = "../../deps/td-shim/td-layout" }
td-paging = { path = "../../deps/td-shim/td-paging"}
td-shim = { path = "../../deps/td-shim/td-shim" }
td-payload = { path = "../../deps/td-shim/td-payload", features = ["tdx"] }
migtd = { path = "../../src/migtd", features = ["remote-attestation", "virtio-vsock"] }
pci = { path = "../../src/devices/pci" }
tdx-tdcall = { path = "../../deps/td-shim/tdx-tdcall" , optional = true }
scroll = { version = "0.10.0", default-features = false, features = ["derive"]}
serde = { version = "1.0", default-features = false, features = ["derive"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
zerocopy = "0.6.0"

minicov = { version = "0.2", default-features = false, optional = true }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootloader]
map-physical-memory = true

[features]
cet-ss = []
tdx = ["tdx-tdcall", "td-logger/tdx"]
main = []
coverage = ["minicov"]