[package]
name = "migtd-hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
crypto = { path = "../../src/crypto" }
migtd = { path = "../../src/migtd" }
serde_json = "1.0"
td-shim-tools = { path = "../../deps/td-shim/td-shim-tools", default-feature = false, features = ["tee"] }
td-uefi-pi = { path = "../../deps/td-shim/td-uefi-pi" }