[package]
name = "migtd-policy-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
crypto = { path = "../../src/crypto" }
futures = "0.3"
json-signer = { path = "../json-signer" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0", features = ["raw_value", "preserve_order"] }
tokio = { version = "1", features = ["rt", "macros"] }