[package]
name = "migtd-policy-verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"

# Use relative path to policy crate
policy = { path = "../../src/policy", features = ["policy_v2"] }

[[bin]]
name = "migtd-policy-verifier"
path = "src/main.rs"
