[package]
name = "pci"
version = "0.1.0"
license = "BSD-2-Clause-Patent"
edition = "2021"

[dependencies]
bitflags = "1.0"
conquer-once = { version = "0.3.2", default-features = false }
lazy_static = { version = "1.0", features = ["spin_no_std"] }
log = "0.4.13"
spin = "0.9"
tdx-tdcall = { path = "../../../deps/td-shim/tdx-tdcall", optional = true }
td-payload = { path = "../../../deps/td-shim/td-payload" }
x86 = { version = "0.47.0", optional = true}

[features]
default = ["tdcall"]
iocall = ["x86"]
tdcall = ["tdx-tdcall"]
fuzz = []
