[package]
name = "virtio"
version = "0.1.0"
license = "BSD-2-Clause-Patent"
edition = "2021"

[dependencies]
bitflags = "1.2.1"
pci = { path = "../pci" }
spin = "0.9.2"
tdx-tdcall = { path = "../../../deps/td-shim/tdx-tdcall", optional = true }
volatile = "0.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[features]
default = ["tdcall"]
tdcall = ["tdx-tdcall"]
fuzz = []