[package]
name = "virtio_serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
virtio = { path = "../virtio" }
lazy_static = { version = "1.0", features = ["spin_no_std"] }
log = "0.4.13"
rust_std_stub = { path = "../../std-support/rust-std-stub" }
spin = "0.9.2"
td-payload = { path = "../../../deps/td-shim/td-payload" }