[package]
name = "sys_time"
version = "0.1.0"
authors = ["Xiaoyu Lu <xiaoyux.lu@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
x86_64 = { version = "0.14", default-features = false, features = ["instructions"] }
time = { version = "0.3", default-features = false }
